--- a/README
+++ b/README
@@ -2,8 +2,7 @@ Welcome to the Freestone API github!
 
 Here you can browse through sample code and see how to best utilize the power that our API offers.
 
-Sample code can be found in the "sample code" folder. Keep in mind, this sample code may reference
-classes that can be found in the "classes" folder.
+Sample code can be found in the "sample code" folder. Keep in mind, this sample code may reference classes that can be found in the "classes" folder.
 
 Happy coding!
 The Peach New Media Apps Team
