--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Welcome to the Freestone API github!
 
-Here you can browse through sample code and see how to best utilize the power that our API offers.
+Here you can browse through sample code and see how to best utilize the power that our API offers. These samples are offered in PHP.
 
 Sample code can be found in the "sample code" folder. Keep in mind, this sample code may reference classes that can be found in the "classes" folder.
 
